[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
chrono-tz = "0.6"
influxdb = { version = "0.7.2", features = ["derive"] }
uuid = { version = "1.12.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
