[package]
name = "publisher"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
rand = "0.8.5"
rumqttc = "0.24.0"
tokio = {version = "1.41.1", features = ["full"]}
models = { path = "../models/" }
uuid = { version = "1.12.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
dotenv = "0.15.0"
log = "0.4.25"
env_logger = "0.11.6"
