[package]
name = "subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = "0.24.0"
tokio = {version="1.41.1", features=["full"]}
influxdb = { version = "0.7.2", features = ["derive"] }
tokio-macros = { version = "2.4.0" }
uuid = { version = "1.12.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
influxdb3client = { path = "../influxdb3client" }
chrono = "0.4.39"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.25"
env_logger = "0.11.6"
